<resources>
    <string name="app_name">Lab9App</string>
    <string name="text">Text</string>
    <string name="face">Face</string>
    <string name="label">Label</string>
    <string name="previous">Previous</string>
    <string name="camera">Camera</string>
    <string name="next">Next</string>

<!-- TODO: Add the Error String Here-->
    <string name="recognizing_text_error">Recognizing Text error.</string>
    <string name="detecting_face_error">Detecting Face error.</string>
    <string name="labeling_image_error">Labeling Image error.</string>
</resources>